--- a/src/app/gifs/pages/home-page/home-page.component.html
+++ b/src/app/gifs/pages/home-page/home-page.component.html
@@ -3,7 +3,7 @@
     <!-- Busqueda -->
     <gifs-search-box></gifs-search-box>
   </div>
-  <div class="col-12">
+  <div class="col-12 pt-4">
     <!-- Listado de gifs -->
-    <gifs-card-list></gifs-card-list>
+    <gifs-card-list  [gifs]="gifs"></gifs-card-list>
 </div>
