--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,7 +3,9 @@
   <hr class="text-white">
 
   <div class="list-group list-reset">
-    <button *ngFor="let tag of tags" class="list-group-item list-group-item-action">
+    <button *ngFor="let tag of tags"
+      
+      class="list-group-item list-group-item-action">
       {{tag | titlecase}}
       <!-- * Son pipe que sirven para alterar la visualizacion del valor sin alterara la valor como tal -->
     </button>
