agregar la funcion de que se pueda volver a elegri un tag que se encuntra en el sidebar

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
 
   <div class="list-group list-reset">
     <button *ngFor="let tag of tags"
-      
+      (click)="searchTag(tag)"
       class="list-group-item list-group-item-action">
       {{tag | titlecase}}
       <!-- * Son pipe que sirven para alterar la visualizacion del valor sin alterara la valor como tal -->
