creación de un componente para el uso de un svg de carga  en los gifs

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
       (click)="searchTag(tag)"
       class="list-group-item list-group-item-action">
       {{tag | titlecase}}
-      <!-- * Son pipe que sirven para alterar la visualizacion del valor sin alterara la valor como tal -->
+      <!-- * Son pipe que sirven para alterar la visualizacion del valor sin alterara la valor original como tal -->
     </button>
   </div>
 </div>
