--- a/src/app/shared/components/lazy-image/lazy-image.component.html
+++ b/src/app/shared/components/lazy-image/lazy-image.component.html
@@ -2,7 +2,7 @@
 
   <img [src]="url"
     [alt]="alt"
-    class="card-img-top"
+    class="card-img-top animate__animate animate__fadeIn"
     (load)="onLoad()"
     [ngStyle]="{display: loaded ? '' : 'none'}"
   />
