--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
-<div class="bg-dark border-right p-3" id="sidebar">
-  <h3 class="text-light">GifsApp</h3>
+<div class="bg-success border-right p-3" id="sidebar">
+  <h3 class="text-light text-center text-3">GifsApp</h3>
   <hr class="text-white">
 
   <div class="list-group list-reset">
     <button *ngFor="let tag of tags"
       (click)="searchTag(tag)"
-      class="list-group-item list-group-item-action">
+      class="list-group-item list-group-item-action text-font-bold">
       {{tag | titlecase}}
       <!-- * Son pipe que sirven para alterar la visualizacion del valor sin alterara la valor original como tal -->
     </button>
